# HigherStudiesPortal

./: .env.example  .gitignore  README.md  check_admin.py  create_admin.py  pyproject.toml  requirements.txt  reset_admin.py
backend/: db.sqlite3  settings.py  urls.py  views.py
backend/backend/: settings.py  urls.py  views.py
backend/higherstudiesportal/: apps.py  views.py
backend/static/css/: login.css
backend/static/js/: login.js
backend/templates/: cc1.html  dash_board.html  faculty_dashboard.html  login.html  lor_application.html  student_dashboard.html
frontend/: package-lock.json  package.json
higherstudiesportal/: models.py  views.py
higherstudiesportal/migrations/: 0001_initial.py  0002_delete_customuser.py  0003_initial.py  0004_supabaseuser.py  0005_coursecompletionrequest.py
higherstudiesportal/templatetags/: __init__.py  user_filters.py
higherstudiesportal/utils/: __init__.py  binomial_heap.py  re_patterns_email.py  supabase_auth.py  supabase_storage.py
static/css/: admin_dashboard.css  cc1.css  common_css.css  loginpage.css  lor_application.css  lor_tracking.css  signuppage.css  verify_certificate.css
static/js/: cc1.js  signup.js
templates/: base.html  login.html  sign-up.html
templates/admin/: admin_dashboard.html  student_list.html  verify_certificate.html  with_binomial_heap.html
templates/faculty/: f_student_list.html  f_verify.html  faculty_dashboard.html
templates/shared/: sidebar.html
templates/student/: cc1.html  cc_verification.html  lor_application.html  lor_tracking.html  student_dashboard.html
(+5 files in other folders)
