[project]
name = "higherstudiesportal"
version = "0.1.0"
description = "Higher Studies Management Portal for department"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.1.7",
    "dotenv==0.9.9",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.0",
    "supabase==2.15",
]
